--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1141,12 +1141,22 @@ body .hide-desktop {
        object-position: 50% 48%; } }
 
 .single-fund .hfeed .related-charities {
-  max-width: 18rem;
-  margin: 0.4rem auto; }
+  margin: 0 auto;
+  max-width: 320px;
+  width: 90%; }
+  @media (min-width: 600px) {
+    .single-fund .hfeed .related-charities {
+      max-width: 90%; } }
+  @media (min-width: 1000px) {
+    .single-fund .hfeed .related-charities {
+      max-width: 950px; } }
   .single-fund .hfeed .related-charities .flickity-viewport {
-    height: 320px; }
+    height: 360px;
+    width: 100%; }
   .single-fund .hfeed .related-charities .carousel-cell {
-    height: 320px;
+    left: 0;
+    text-align: center;
+    height: 350px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1161,62 +1171,43 @@ body .hide-desktop {
         -ms-flex-align: center;
             align-items: center;
     -ms-flex-direction: column;
-        flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    max-width: 100%;
-    margin: 0 21px; }
+        flex-direction: column; }
+    @media (min-width: 800px) {
+      .single-fund .hfeed .related-charities .carousel-cell {
+        width: 30%; } }
+    @media (min-width: 1000px) {
+      .single-fund .hfeed .related-charities .carousel-cell {
+        width: 30%; } }
     .single-fund .hfeed .related-charities .carousel-cell .charity-description {
-      font-size: 1.2rem;
-      margin: 0 0.7rem;
       font-size: 1rem;
-      line-height: 1.6rem; }
+      line-height: 1.3rem;
+      padding: 0 0.8rem;
+      -webkit-box-flex: 1;
+          -ms-flex-positive: 1;
+              flex-grow: 1; }
     .single-fund .hfeed .related-charities .carousel-cell .read-more-button {
       color: #14225F;
-      padding-left: 7rem; }
+      padding-right: 0.5rem;
+      width: 100%;
+      text-align: right;
+      height: 10%; }
+    .single-fund .hfeed .related-charities .carousel-cell .charity-logo-container {
+      width: 100%;
+      height: 40%;
+      position: relative; }
     .single-fund .hfeed .related-charities .carousel-cell .charity-logo {
-      position: static;
       border-radius: 0;
-      padding: 0 1rem;
-      -webkit-transform: translateX(0%);
-              transform: translateX(0%);
-      top: 0;
-      max-width: 92%;
-      max-height: 40%;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%);
       height: auto;
-      width: auto; }
-  .single-fund .hfeed .related-charities .flickity-prev-next-button {
-    top: 114%; }
-    .single-fund .hfeed .related-charities .flickity-prev-next-button.previous {
-      left: 12px; }
-    .single-fund .hfeed .related-charities .flickity-prev-next-button.next {
-      right: 12px; }
-
-@media (min-width: 600px) {
-  .single-fund .hfeed .related-charities {
-    max-width: 96%; }
-    .single-fund .hfeed .related-charities .flickity-viewport {
-      width: 43rem; }
-    .single-fund .hfeed .related-charities .carousel-cell {
-      width: 40%;
-      margin-left: 38px;
-      margin-right: 38px; }
-    .single-fund .hfeed .related-charities .previous {
-      left: -30px;
-      display: unset; }
-    .single-fund .hfeed .related-charities .next {
-      right: -30px;
-      display: unset; } }
-
-@media (min-width: 800px) {
-  .single-fund .hfeed .related-charities {
-    max-width: 96%; }
-    .single-fund .hfeed .related-charities .flickity-viewport {
-      width: 38rem; }
-    .single-fund .hfeed .related-charities .carousel-cell {
-      max-width: 100%;
-      width: 42%;
-      margin: 0 45px; } }
+      width: 90%;
+      max-height: 100%; }
+  .single-fund .hfeed .related-charities .flickity-prev-next-button.previous {
+    display: none; }
+  .single-fund .hfeed .related-charities .flickity-prev-next-button.next {
+    display: none; }
 
 /* The Team page */
 .page-template-page-team .site-content .entry-header {
