--- a/themes/rcforward/sass/_page-templates.scss
+++ b/themes/rcforward/sass/_page-templates.scss
@@ -526,14 +526,20 @@
       // width:500px;
       
       .flickity-viewport {
-        height: 360px;
+        height: 370px;
 
         width:100%;
+        padding-top:1rem;
         // width:300px;
         // margin:0 auto;
       }
         
           .carousel-cell {
+            border:none;
+            box-shadow: 0px 0px 3px 2px darken(white, 10%);
+    &:hover{
+        box-shadow: 0px 0px 5px 3px darken(white, 10%);
+    }
             left:0;
             text-align: center;
             height: 350px;
