--- a/themes/rcforward/style.css
+++ b/themes/rcforward/style.css
@@ -1151,9 +1151,13 @@ body .hide-desktop {
     .single-fund .hfeed .related-charities {
       max-width: 950px; } }
   .single-fund .hfeed .related-charities .flickity-viewport {
-    height: 360px;
-    width: 100%; }
+    height: 370px;
+    width: 100%;
+    padding-top: 1rem; }
   .single-fund .hfeed .related-charities .carousel-cell {
+    border: none;
+    -webkit-box-shadow: 0px 0px 3px 2px #e6e6e6;
+            box-shadow: 0px 0px 3px 2px #e6e6e6;
     left: 0;
     text-align: center;
     height: 350px;
@@ -1172,6 +1176,9 @@ body .hide-desktop {
             align-items: center;
     -ms-flex-direction: column;
         flex-direction: column; }
+    .single-fund .hfeed .related-charities .carousel-cell:hover {
+      -webkit-box-shadow: 0px 0px 5px 3px #e6e6e6;
+              box-shadow: 0px 0px 5px 3px #e6e6e6; }
     @media (min-width: 800px) {
       .single-fund .hfeed .related-charities .carousel-cell {
         width: 30%; } }
